--- a/MvcTechdaysBlog/Web.config
+++ b/MvcTechdaysBlog/Web.config
@@ -42,7 +42,7 @@
       <add name="CompilableFileModule" type="SassAndCoffee.AspNet.CompilableFileModule" />
       <add name="Glimpse" type="Glimpse.Core.Module" />
     </httpModules>
-    <customErrors mode="On"></customErrors>
+    <customErrors mode="RemoteOnly"></customErrors>
     <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
     <httpHandlers>
       <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
