--- a/MvcTechdaysBlog/MvcTechdaysBlog.csproj
+++ b/MvcTechdaysBlog/MvcTechdaysBlog.csproj
@@ -115,9 +115,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\EntityFramework.SqlServerCompact.cs" />
+    <Compile Include="App_Start\TechDaysErrorLogging.cs" />
     <Compile Include="Areas\Admin\AreaAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\ArticleController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Filters\AllowAnonymousAttribute.cs" />
+    <Compile Include="Filters\RequireAuthenticationAttribute.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\DataService.cs" />
     <Compile Include="Models\Article.cs" />
@@ -256,7 +259,6 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
-    <Folder Include="Filters\" />
     <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
